src/components/base-components/custom-list/styles.css
custom-list {
    font-family: var(--font-family-default);
    font-size: var(--font-size-default);
    font-weight: var(--font-weight-default);
    color: var(--color-text-default);
    line-height: var(--line-height-default);
    & .field {
        & label {
            font-weight: bold;
            display: block;
            page-break-after: avoid;
            page-break-inside: avoid;
            &::after {
                content: "";
                display: block;
                height: 50px;
                margin-bottom: -50px;
            }
        }
    }
    & ul {
        padding-inline-start: 1em;
        margin-block: 0;
        display: block;
        &.has-title {
            page-break-before: avoid;
        }
    }
}

